<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.elasticsearch</groupId>
    <artifactId>elasticsearch-analysis-vietnamese</artifactId>
    <version>9.3.0</version>
    <packaging>jar</packaging>
    <name>elasticsearch-analysis-vietnamese</name>
    <url>https://github.com/duydo/elasticsearch-analysis-vietnamese/</url>
    <description>Elasticsearch Vietnamese Analysis Plugin</description>
    <inceptionYear>2014</inceptionYear>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>duydo</id>
            <name>Duy Do</name>
            <url>https://duydo.me</url>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:duydo/elasticsearch-analysis-vietnamese.git</connection>
        <developerConnection>scm:git:git@github.com:duydo/elasticsearch-analysis-vietnamese.git</developerConnection>
        <url>http://github.com/duydo/elasticsearch-analysis-vietnamese</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.java.version>21</project.build.java.version>
        <elasticsearch.version>${project.version}</elasticsearch.version>
        <log4j.version>2.24.3</log4j.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.elasticsearch.test</groupId>
            <artifactId>framework</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <!-- Allow ES native provider to load via Panama/FFM API (eliminates
                         NativeAccess WARN + "restricted method" JVM warnings).
                         Disable Netty's sun.misc.Unsafe usage so Java 21.0.10+ does not
                         print the backported "terminally deprecated" Unsafe warnings.
                         JUL config suppresses the Lucene vector-API warning before the
                         ES test framework bridges JUL to log4j2.
                         enable-preview required because Homebrew OpenJDK 21 still marks
                         java.lang.foreign (FFM API) as a preview feature. -->
                    <argLine>--enable-preview --enable-native-access=ALL-UNNAMED -Dio.netty.noUnsafe=true -Djava.util.logging.config.file=${project.basedir}/src/test/resources/jul-suppress.properties</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
